update - fixing some layout problems in css files

--- a/css/components.css
+++ b/css/components.css
@@ -10,6 +10,7 @@ p {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 
 	.section__heading__icon {
 		width: 100%;
