--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
 	border-radius: 0.5em;
 }
 
+section {
+	padding: 1em;
+}
+
 /* -------------------------- navbar section ------------------------------- */
 
 .overlay {
@@ -207,8 +211,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	min-height: 100vh;
-	padding: 2em;
 	gap: 3em;
 	background-color: var(--secondary-color);
 
@@ -232,7 +234,6 @@
 	min-height: 100vh;
 	background-color: var(--primary-color);
 	color: var(--secondary-color);
-	padding: 2em;
 	gap: 3em;
 
 	.products__svg {
@@ -329,6 +330,17 @@
 			}
 		}
 	}
+
+	@media screen and (min-width: 1444px) {
+		.products__heading,
+		.products__abstract {
+			align-self: center;
+		}
+
+		.products__abstract {
+			text-align: center;
+		}
+	}
 }
 
 /* -------------------------- testimonials section ------------------------------- */
@@ -343,7 +355,6 @@
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	padding: 2em;
 	gap: 3em;
 	background-color: var(--secondary-color);
 
@@ -354,7 +365,8 @@
 	}
 
 	.testimonials__cards {
-		width: 80%;
+		width: 90%;
+		max-width: 60em;
 		max-height: 35em;
 		display: flex;
 		justify-content: space-between;
@@ -404,8 +416,7 @@
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
-	padding: 2em;
-	gap: 4em;
+	gap: 1em;
 	background-color: var(--primary-color);
 	color: var(--secondary-color);
 
@@ -426,10 +437,9 @@
 		justify-content: center;
 		flex-wrap: wrap;
 		gap: 2em;
-		padding: 4em 2em;
+		padding: 1em;
 		border-radius: 1em;
 		color: var(--secondary-color);
-		box-shadow: 0em 0 2em var(--box-shadow);
 
 		.contact-us__form__set {
 			display: flex;
@@ -487,9 +497,17 @@
 		}
 	}
 
-	@media screen and (min-width: 992px) {
+	@media screen and (min-width: 1200px) {
 		flex-direction: row;
 		align-items: flex-start;
+
+		.contact-us__form {
+			padding: 0 3em;
+		}
+
+		.contact-us__section-info--wrapper {
+			width: 50%;
+		}
 	}
 }
 
